# SuperCraftCPP

./: .gitignore  CMakeLists.txt
include/: compileShader.hpp  shader.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: shader.fs  shader.vs
src/: compileShader.cpp  main.cpp  shader.cpp
